# http-client

http-client-handle/: README.md  http-client-handle.cabal
http-client-handle/src/Network/HTTP/Client/: Handle.hs
http-client-handle/src/Network/HTTP/Client/Middleware/: RequestId.hs
