name:                http-client-handle
version:             0.1.0
synopsis:            An HTTP client interface
-- description:
homepage:            https://github.com/githubuser/http-client-handle#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          web@ksfmedia.fi
copyright:           2018 KSF Media
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Client.Handle,
                       Network.HTTP.Client.Middleware.RequestId
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       mtl,
                       unliftio,
                       conduit,
                       http-client,
                       http-types,
                       http-conduit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KSF-Media/http-client
  subdir: http-client-handle
